CVS HEAD:
 * added support for specifying a reference rectangle when using relative-positionning syntax in themes
 * updated translations:
   * catalan
   * italian
   * swedish
   * russian
 * fixed missing Deathblade in multiplayer
 * downloaded campaigns no longer require a restart to be able to play them
 * new units:
   * Javelineer
 * unit balancing:
   * Swordsman: increase resistance to pierce and impact
   * Royal guard: increase resistance to pierce and impact
   * Pikeman: increase resistance to pierce, change attacks number and damage
   * Halberdier: increase resistance to pierce, increase blade damage, decrease
      pierce damage
 * "," is no longer the column separator, it does not have to be escaped
   anymore in some translations, "=" is the new separator
 * fix pathfinding bug (#11196)
 * code cleanups

Version 0.8.8:
 * campaign server stores size of campaigns
 * user interface improvements:
   * consistently compute minimum allowed zoom value according to screen size
   * improved readability of chat messages on light backgrounds (#10900)
 * made it possible to move and attack with a single click
 * graphics improvements: 
   * portraits for all TRoW characters that speak in more than one scenario added
   * a portrait for Queen Asheviere in HttT
   * hotseat and vs AI multiplayer icons
   * new or modified unit images: orcish warlord, soul shooter, bone shooter
   * preparations for mountain and desert village graphics
   * new attack icons: bone arrow stab, cleaver, morning star, crush
 * scenario fixes for 'Eastern Invasion' campaign:
   * Weldyn Under Attack (#11051)
   * Capture
   * fixed end of campaign settings
 * scenario fixes for 'Son of the Black Eye' campaign:
   * Saving Inarix
 * scenario fixes for 'The Rise of Wesnoth' campaign:
   * The Vanguard, fixed chest placement
   * make the chests squeak
 * scenario fixes and balancing for 'Heir to the Throne' campaign:
   * A Test of the Clans
   * Return to Wesnoth
 * unit balancing: 