@@ -10,6 +10,7 @@ height=1
 name=Default
 
 [resolution]
+id=1024x768
 width=1024
 height=768
 
@@ -58,6 +59,7 @@ height=768
 	[/panel]
 
 	[menu]
+	id=menu-main
 	title= _ "Menu"
 	image=lite
 	items=objectives,statistics,unitlist,separator,statustable,save,load,preferences,chatlog,help,quit
@@ -257,6 +259,7 @@ height=768
 		prefix_literal=""
 		[/num_units]
 		[upkeep]
+		id=status-upkeep
 		font_size=12
 		ref=upkeep-icon
 		rect=+4,=,+40,+16
@@ -266,6 +269,7 @@ height=768
 		prefix_literal=""
 		[/upkeep]
 		[income]
+		id=status-income
 		font_size=12
 		ref=income-icon
 		rect=+4,=,+40,+16
@@ -275,12 +279,14 @@ height=768
 		prefix_literal=""
 		[/income]
 		[terrain]
+		id=status-terrain
 		font_size=12
 		rect=+5,=,+120,+16
 		xanchor=proportional
 		yanchor=fixed
 		[/terrain]
 		[position]
+		id=status-position
 		font_size=12
 		rect=+5,=,+105,+16
 		xanchor=proportional
@@ -377,349 +383,51 @@ height=768
 		yanchor=fixed
 		[/unit_weapons]
 	[/status]
-
-	[dummy]
-		id=dummy2
-	[/dummy]
 [/resolution]
 
-[resolution]
+[partialresolution]
+id=800x600
+inherits=1024x768
 width=800
 height=600
 
-	# top panel
-	[panel]
-	image=misc/top-bg.png
-	rect=0,0,1024,26
-	xanchor=top
-	yanchor=fixed
-	[/panel]
-
-	[main_map]
-	rect=0,26,882,768
-	xanchor=left
-	yanchor=top
-	[/main_map]
-
-	# rightside panel
-	[panel]
-	image=misc/rightside.png
-	rect=882,25,1024,309
-	xanchor=right
-	yanchor=fixed
-	[/panel]
-	[panel]
-	image=misc/rightside-bg.png
-	rect=882,309,1024,730
-	xanchor=right
-	yanchor=top
-	[/panel]
-	[panel]
-	image=misc/rightside-bottom.png
-	rect=882,730,0,768
-	xanchor=right
-	yanchor=bottom
-	[/panel]
-
-	[menu]
-	title= _ "Menu"
-	image=lite
+	[change]
+	id=menu-main
 	items=objectives,statistics,unitlist,statustable,save,load,preferences,chatlog,help,quit
-	rect=3,1,103,22
-	xanchor=fixed
-	yanchor=fixed
-	[/menu]
+	[/change]
 
-	[menu]
-	title= _ "Actions"
-	image=lite
-	items=undo,redo,cycle,speak,recruit,recall,showenemymoves,bestenemymoves,delayshroud,updateshroud,endturn
-	rect=105,1,205,22
-	xanchor=fixed
-	yanchor=fixed
-	[/menu]
+	[change]
+	id=turn-panel
+	rect=+65,=+1,+95,+19
+	[/change]
 
-	[menu]
-	is_context_menu=true
-	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
-	[/menu]
-	[mini_map]
-	rect=892,32,1017,175
-	xanchor=right
-	yanchor=fixed
-	[/mini_map]
+	[change]
+	id=upkeep-panel
+	rect=+5,=,+100,=
+	[/change]
+	[change]
+	id=income-panel
+	rect=+5,=,+89,=
+	[/change]
 
-	[menu]
-	title= _ "End Turn"
-	items=endturn
-	rect=900,737
-	xanchor=right
-	yanchor=bottom
-	[/menu]
+	[change]
+	id=status-upkeep
+	rect=+4,=,+55,+16
+	[/change]
+	[change]
+	id=status-income
+	rect=+3,=,+45,+16
+	[/change]
 
-	[panel]
-	image=misc/status-bg.png
-	rect=270,2,365,21
-	xanchor=proportional
-	yanchor=fixed
-	[/panel]
-	[panel]
-	image=misc/status-bg.png
-	rect=370,2,465,21
-	xanchor=proportional
-	yanchor=fixed
-	[/panel]
-	[panel]
-	image=misc/status-bg.png
-	rect=470,2,555,21
-	xanchor=proportional
-	yanchor=fixed
-	[/panel]
-	[panel]
-	image=misc/status-bg.png
-	rect=560,2,645,21
-	xanchor=proportional
-	yanchor=fixed
-	[/panel]
-	[panel]
-	image=misc/status-bg.png
-	rect=650,2,750,21
-	xanchor=proportional
-	yanchor=fixed
-	[/panel]
-	[panel]
-	image=misc/status-bg.png
-	rect=755,2,844,21
-	xanchor=proportional
-	yanchor=fixed
-	[/panel]
+	[remove]
+	id=status-terrain
+	[/remove]
 
-	# HP/XP
-	[label]
-	font_size=10
-	text= _ "HP"
-	rect=967,234,1022,246
-	xanchor=right
-	yanchor=fixed
-	[/label]
-	[label]
-	font_size=10
-	text= _ "XP"
-	rect=967,260,1022,272
-	xanchor=right
-	yanchor=fixed
-	[/label]
-
-	# gold icon
-	[label]
-	icon=misc/gold.png
-	text= _ "gold"
-	rect=375,3,391,19
-	xanchor=proportional
-	yanchor=fixed
-	[/label]
-	# villages icon
-	[label]
-	icon=misc/villages.png
-	text= _ "villages"
-	rect=475,3,491,19
-	xanchor=proportional
-	yanchor=fixed
-	[/label]
-	# units icon
-	[label]
-	icon=misc/units.png
-	text= _ "units"
-	rect=565,3,581,19
-	xanchor=proportional
-	yanchor=fixed
-	[/label]
-	# upkeep icon
-	[label]
-	icon=misc/upkeep.png
-	text= _ "upkeep"
-	rect=655,3,687,19
-	xanchor=proportional
-	yanchor=fixed
-	[/label]
-	# income icon
-	[label]
-	icon=misc/income.png
-	text= _ "income"
-	rect=760,3,792,19
-	xanchor=proportional
-	yanchor=fixed
-	[/label]
-
-	[status]
-		# the time of day image
-		[time_of_day]
-		rect=892,184,1017,223
-		xanchor=right
-		yanchor=fixed
-		[/time_of_day]
-
-		[observers]
-		font_size=12
-		rect=1004,3,1020,19
-		xanchor=proportional
-		yanchor=fixed
-		[/observers]
-
-		#put the side playing indicator next to the turn indicator
-		[side_playing]
-		rect=273,4,288,20
-		xanchor=proportional
-		yanchor=fixed
-		[/side_playing]
-
-		# the game status
-		[turn]
-		font_size=12
-		rect=292,4,360,20
-		xanchor=proportional
-		yanchor=fixed
-		prefix=
-		prefix_literal=""
-		[/turn]
-		[gold]
-		font_size=12
-		rect=395,4,460,20
-		xanchor=proportional
-		yanchor=fixed
-		prefix=
-		prefix_literal=""
-		[/gold]
-		[villages]
-		font_size=12
-		rect=495,4,550,20
-		xanchor=proportional
-		yanchor=fixed
-		prefix=
-		prefix_literal=""
-		[/villages]
-		[num_units]
-		font_size=12
-		rect=585,4,640,20
-		xanchor=proportional
-		yanchor=fixed
-		prefix=
-		prefix_literal=""
-		[/num_units]
-		[upkeep]
-		font_size=12
-		rect=690,4,745,20
-		xanchor=proportional
-		yanchor=fixed
-		prefix=
-		prefix_literal=""
-		[/upkeep]
-		[income]
-		font_size=12
-		rect=795,4,840,20
-		xanchor=proportional
-		yanchor=fixed
-		prefix=
-		prefix_literal=""
-		[/income]
-	[comment]
-		[terrain]
-		font_size=12
-		rect=770,4,890,20
-		xanchor=proportional
-		yanchor=fixed
-		[/terrain]
-	[/comment]
-		[position]
-		font_size=12
-		rect=855,4,1000,20
-		xanchor=proportional
-		yanchor=fixed
-		[/position]
-
-		#unit stats here
-		[unit_image]
-		rect=891,235,963,307
-		xanchor=right
-		yanchor=fixed
-		[/unit_image]
-		[unit_description]
-		font_size=14
-		rect=891,312,1022,330
-		xanchor=right
-		yanchor=fixed
-		[/unit_description]
-		[unit_type]
-		font_size=12
-		rect=891,330,1022,346
-		xanchor=right
-		yanchor=fixed
-		[/unit_type]
-		[unit_level]
-		font_size=12
-		rect=891,346,1022,362
-		prefix= _ "statuspanel^level"
-		prefix_literal=" "
-		xanchor=right
-		yanchor=fixed
-		[/unit_level]
-		[unit_alignment]
-		font_size=12
-		rect=891,362,1022,378
-		xanchor=right
-		yanchor=fixed
-		[/unit_alignment]
-		[unit_traits]
-		font_size=12
-		rect=891,378,1022,394
-		xanchor=right
-		yanchor=fixed
-		[/unit_traits]
-		[unit_abilities]
-		font_size=12
-		rect=891,394,1022,410
-		xanchor=right
-		yanchor=fixed
-		[/unit_abilities]
-		[unit_status]
-		font_size=12
-		rect=968,289,1020,305
-		xanchor=right
-		yanchor=fixed
-		[/unit_status]
-		[unit_moves]
-		font_size=12
-		rect=891,410,1022,426
-		prefix= _ "statuspanel^movement"
-		prefix_literal=": "
-		xanchor=right
-		yanchor=fixed
-		[/unit_moves]
-		[unit_hp]
-		font_size=12
-		rect=967,246,1022,260
-		#prefix=hp
-		#prefix_literal=" "
-		xanchor=right
-		yanchor=fixed
-		[/unit_hp]
-		[unit_xp]
-		font_size=12
-		rect=967,272,1022,286
-		#prefix=xp
-		#prefix_literal=" "
-		xanchor=right
-		yanchor=fixed
-		[/unit_xp]
-		[unit_weapons]
-		font_size=12
-		#rect=900,452,1020,620
-		rect=891,426,1022,594
-		xanchor=right
-		yanchor=fixed
-		[/unit_weapons]
-	[/status]
-[/resolution]
+	[change]
+	id=status-position
+	rect=+15,=,+145,+16
+	[/change]
+[/partialresolution]
 
 [resolution]
 width=320
