@@ -1,5 +1,7 @@
 CVS HEAD:
- * added support for specifying a reference rectangle when using relative-positionning syntax in themes
+ * theme syntax improvements:
+   * added support for specifying a reference rectangle when using relative-positionning syntax
+   * added support for theme inheritance, to avoid duplicating mostly-unchanged code
  * updated translations:
    * catalan
    * italian
